src/web/static/common.css
body {
	padding: 0;
}

.info {
	color: green;
	text-align: center;
}

.error {
	color: red;
	text-align: center;
}

.media-container img {
	margin-left: 20px;
	cursor: zoom-in;
}

.media-container .media {
	display: none;
}

.zoom-check {
	display: none;
}

.zoom-check:checked ~ label > .media {
	width: auto;
	display: block;
	cursor: zoom-out;
}

.zoom-check:checked ~ label > .thumbnail {
	display: none;
}

.media-video p {
	font-size: 12px;
	padding: 0;
	margin: 0;
}

.media-video video {
	cursor: auto;
	max-width: 900px;
}

#show-form:checked ~ #new-reply {
	display: none;
}

.form {
	position: -webkit-sticky;
	position: sticky;
	top: 10px;
	left: 100%;
	margin-right: 10px;
	width: 245px;
}

.form-container {
	top: 10px;
	height: 0;
	position: -webkit-sticky;
	position: sticky;
}

.post {
	padding: 3px;
	padding-left: 15px;
	padding-right: 15px;
	margin-left: 10px;
	margin-bottom: 10px;
	background-color: #d6daf0;
	min-width: 300px;
	width: auto;
	display: inline-block;
}

.post img {
	float: left;
	margin-right: 25px;
	margin-bottom: 10px;
}

.post-bar {
	display: flex;
	white-space: nowrap;
}

.post-top {
	min-width: 450px;
	display: flex;
	max-height: 24px;
}

.post-first {
	background-color: inherit;
	margin-top: -10px;
	margin-left: -5px;
}

.post-link {
	text-decoration: none;
	color: inherit;
}

.post-ref {
	font-size: 9pt;
}

.content a {
	color: #D00;
}

.content .green-text {
	color: #789922;
}

.content {
	margin-left: 10px;
}

.name {
	font-weight: bold;
}

.ip {
	font-size: 10pt;
}

.action {
	font-size: 10pt;
}

.title {
	font-weight: bold;
	margin-right: 5px;
}

.board-title {
	text-align: center;
	color: #af0a0f;
}

.separator {
	border-bottom: 1px solid gray;
	margin-top: 10px;
	margin-bottom: 10px;
}

.bar {
	font-size: 10pt;
}

.bar-second {
	margin-top: 10px;
	float: right;
}

.catalog {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	margin-top: 15px;
	margin-bottom: 15px;
	max-width: 1920px;
}

.thread img {
	max-width: 150px;
	max-height: 200px;
}

.thread {
	display: inline;
	width: 150px;
	height: 250px;
	text-align: center;
	padding: 20px;
	overflow: hidden;
}

.thread-hidden {
	border: 2px solid #99c;
}

.thread-info {
	margin: 0;
	font-size: 9pt;
	font-weight: bold;
}

.new-form {
	width: fit-content;
	margin-left: auto;
	margin-right: auto;
}

.new-form:has(input[name=signed]:checked) input[name=name] {
	opacity: 0.5 !important;
	pointer-events: none;
}

#new-thread-check ~ label > span {
	cursor: pointer;
	color: #3391ff;
	text-align: center;
}

#new-thread-check ~ label > span:hover {
	color: red;
}

#new-thread-check ~ label {
	text-align: center;
	font-size: 16pt;
}

#new-thread-check:checked ~ label {
	display: none;
}

#new-thread-check {
	display: none;
}

#new-thread-check ~ form {
	display: none;
}

#new-thread-check:checked ~ form {
	display: inline;
}

.new-form th {
	font-size: 10pt;
	border: 1px solid black;
}

.new-form td input {
	width: 300px;
}

.new-form > form > input {
	margin-left: 100%;
	width: 90px;
}

.new-form td textarea {
	width: 300px;
}

.boards table {
	width: auto;
	border: 2px solid black;
	margin: auto;
}

.boards td {
	padding-left: 10px;
	padding-right: 10px;
}

.boards h2 {
	text-align: center;
	font-size: 16pt;
	margin: 3px;
}

.boards a {
	text-decoration: none;
}

.boards a:hover {
	color: red;
}

.center {
	margin: auto;
	width: fit-content;
}

.error p {
	text-align: center;
}

:root {
  --pc: #d6bad0; /* preview color */
}

.administrator {
	color: darkred;
}

.moderator {
	color: darkgreen;
}

.pending-approval {
	background-color: black;
	border: 2px dashed yellow;
}

.icon {
	max-width: 64px;
	max-height: 64px;
}

.banner {
	max-width: 400px;
	max-height: 150px;
	width: auto;
	height: auto;
}

.banner-box {
	padding: 50px;
}

.space-around {
	display: flex;
	justify-content: space-between;
	width: 300px;
	padding: 10px;
}

.side-menu {
	position: fixed;
	z-index: 1;
	left: 0;
	overflow-x: hidden;
}

.side-menu p {
	margin-bottom: 0px;
	padding-bottom: 0px;
}

.side-menu ul {
	border-top: 2px solid black;
	border-right: 1px solid gray;
	padding-right: 15px;
	padding-top: 0;
	margin-top: 0;
	height: 350px;
}

.flag {
	margin: 0 !important;
	padding: 3px;
	padding-top: 6px;
	height: 11px;
}

.poster-id {
	color: white;
	border-radius: 2px;
	padding: 2px;
	height: fit-content;
}

.sticky {
	margin: 0 !important;
	padding: 0 !important;
	width: 16px;
	height: 16px;
}

@media screen and (max-width: 500px){
	.banner {
		max-width: 300px;
		height: auto;
	}
	.thread {
		padding: 10px;
	}
	.post {
		width: auto;
		margin-left: 0px;
	}
	.post-bar {
		display: inline;
		white-space: normal
	}
	.new-form td textarea {
		width: auto;
	}
	.new-form td input {
		width: auto;
	}
	.new-form > form > input {
		margin: 0;
		width: 100%;
	}
	.zoom-check:checked ~ label > .media {
		max-width: 100%;
	}
}

